# browser-commander

./: .gitattributes  .gitignore  .gitkeep  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json
.changeset/: add-ci-workflow.md  add-custom-chrome-args.md  add-is-timeout-error.md  bumpy-snakes-play.md
.github/workflows/: ci-policy.yml  docs.yml  js.yml  python.yml  release.yml  rust.yml
docs/: feature-parity.md
docs/case-studies/issue-13/: README.md
docs/case-studies/issue-27/: job-summary.md
docs/case-studies/issue-29/: ci-run-21092316062-metadata.json  ci-run-21092316062.txt
docs/case-studies/issue-33/: ci-run-21116038007-metadata.json
docs/case-studies/issue-35/: README.md
docs/case-studies/issue-36/: case-study.md
docs/case-studies/issue-37/: README.md
docs/case-studies/issue-38/: README.md
docs/case-studies/issue-39/: README.md
docs/case-studies/issue-47/: analysis.md
docs/case-studies/issue-51/: README.md
docs/case-studies/issue-53/: README.md
docs/case-studies/issue-55/: README.md
examples/react-test-app/: index.html  package.json
examples/react-test-app/src/: App.jsx  styles.css
experiments/: test-crates-io-check.mjs  test-next-version.mjs
js/: .prettierignore  CHANGELOG.md  README.md  eslint.config.js  jsdoc.json  package-lock.json  package.json
js/.changeset/: add-emulate-media-color-scheme.md  add-pdf-method.md  browser-commander-tests.md  dialog-event-handling.md  extensibility-escape-hatch.md  fix-normalize-selector-array-validation.md  fix-playwright-evaluate-multiple-args.md  fix-readme-npm-publish.md  fix-version-commit-monorepo-path.md  issue-51-generated-docs.md  keyboard-interaction-support.md  quiet-ci-logs.md  translate-to-rust.md
js/examples/: browser-commander-tests.example.js  pdf-generation.js
js/scripts/: clean-npm-config.mjs  format-release-notes.mjs  npm-registry.mjs  publish-to-npm.mjs  run-tests.mjs  setup-npm.mjs  validate-changeset.mjs  version-and-commit.mjs
js/src/: README.md  bindings.js  exports.js  factory.js  index.js
js/src/browser/: launcher.js  media.js  navigation.js  pdf.js
js/src/core/: constants.js  dialog-manager.js  engine-adapter.js  navigation-manager.js  navigation-safety.js  network-tracker.js  page-session.js  page-trigger-manager.js
js/src/elements/: selectors.js  visibility.js
js/src/high-level/: universal-logic.js
python/: .gitignore  README.md  pyproject.toml
python/changelog.d/: 21.added.md  38.added.md  39.added.md
python/changelog.d/templates/: new_fragment.md.j2
python/scripts/: create_github_release.py  detect_code_changes.py  version_and_commit.py
python/src/browser_commander/: __init__.py  exports.py  factory.py
python/src/browser_commander/browser/: __init__.py  launcher.py  media.py  navigation.py  pdf.py
python/src/browser_commander/core/: __init__.py  constants.py  dialog_manager.py  engine_adapter.py  engine_detection.py  logger.py  navigation_manager.py  navigation_safety.py  network_tracker.py  page_trigger_manager.py
python/src/browser_commander/elements/: __init__.py  content.py  locators.py  selectors.py  visibility.py
python/src/browser_commander/high_level/: __init__.py  universal_logic.py
python/src/browser_commander/interactions/: __init__.py  click.py  fill.py  keyboard.py  scroll.py
python/src/browser_commander/utilities/: __init__.py  url.py  wait.py
python/tests/: __init__.py  conftest.py
python/tests/e2e/: __init__.py
python/tests/helpers/: __init__.py  mocks.py
python/tests/unit/: __init__.py  test_factory.py
python/tests/unit/browser/: __init__.py  test_launcher.py  test_media.py  test_navigation.py  test_pdf.py
python/tests/unit/core/: test_constants.py  test_dialog_manager.py  test_engine_adapter.py  test_engine_detection.py  test_logger.py  test_navigation_safety.py  test_page_trigger_manager.py
python/tests/unit/elements/: __init__.py  test_content.py  test_selectors.py  test_visibility.py
python/tests/unit/high_level/: __init__.py  test_universal_logic.py
python/tests/unit/interactions/: __init__.py  test_click.py  test_fill.py  test_keyboard.py  test_scroll.py
python/tests/unit/utilities/: __init__.py  test_url.py  test_wait.py
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/changelog.d/: 38.added.md  49.added.md  51.node-bridge-engines.md  README.md
rust/scripts/: publish-crate.mjs  version-and-commit.mjs
rust/src/: lib.rs  main.rs
rust/src/browser/: chromiumoxide_adapter.rs  launcher.rs  media.rs  mod.rs  navigation_ops.rs  node_bridge.rs  node_engine_bridge.js
rust/src/core/: constants.rs  dialog.rs  engine.rs  logger.rs  mod.rs  navigation.rs
rust/src/elements/: content.rs  mod.rs  selectors.rs  visibility.rs
rust/src/high_level/: mod.rs  universal_logic.rs
rust/src/interactions/: click.rs  fill.rs  keyboard.rs  mod.rs  scroll.rs
rust/src/utilities/: mod.rs  url.rs  wait.rs
rust/tests/: launch_smoke.rs
scripts/: check-ci-workflows.mjs  create-manual-changeset.mjs  detect-code-changes.mjs  merge-changesets.mjs  publish-to-npm.mjs  validate-changeset.mjs
src/: ARCHITECTURE.md  README.md  bindings.js  exports.js  factory.js
src/browser/: launcher.js  navigation.js
src/core/: constants.js  engine-adapter.js  engine-detection.js  logger.js  navigation-manager.js  navigation-safety.js  network-tracker.js  page-session.js  page-trigger-manager.js  preferences.js
src/elements/: content.js  locators.js  selectors.js  visibility.js
src/high-level/: universal-logic.js
src/interactions/: click.js  fill.js  scroll.js
src/utilities/: url.js  wait.js
tests/e2e/: playwright.e2e.test.js  puppeteer.e2e.test.js
tests/helpers/: mocks.js
tests/unit/: bindings.test.js  factory.test.js
(+46 files in other folders)
