[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-commander"
version = "0.5.3"
description = "Universal browser automation library that supports both Playwright and Selenium with a unified API"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.9"
authors = [{ name = "Link Foundation" }]
keywords = [
    "browser",
    "automation",
    "playwright",
    "selenium",
    "testing",
    "e2e",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
selenium = ["selenium>=4.15.0"]
all = ["playwright>=1.40.0", "selenium>=4.15.0"]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "scriv[toml]>=1.5.0",
    # For testing, include both browser drivers
    "playwright>=1.40.0",
    "selenium>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/link-foundation/browser-commander"
Repository = "https://github.com/link-foundation/browser-commander"
Issues = "https://github.com/link-foundation/browser-commander/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_commander"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate commented out code
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults
    "B904",   # raise without from inside except (for reraise patterns)
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "TC001",  # move import into TYPE_CHECKING block (adds complexity)
    "TC003",  # move import into TYPE_CHECKING block (adds complexity)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["browser_commander"]

[tool.mypy]
python_version = "3.9"
# Relaxed strictness for initial release, will tighten over time
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
# Ignore missing type stubs for Any returns (common with browser automation)
disable_error_code = ["no-any-return", "type-arg", "union-attr", "misc"]

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "selenium.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 20
show_missing = true

[tool.scriv]
format = "md"
fragment_directory = "changelog.d"
insert_marker = "<!-- scriv-insert-here -->"
main_branches = ["main"]
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"
version = "literal: pyproject.toml: project.version"
